# HTML_Canvas_Deep_Dive

./: README.md
Chapter_01/: README.md  gradients.html  images.html  obtuse_angled_triangle.html  red_ bezier_curve.html  simple_red_rectangle.html  text.html
Chapter_02/: README.md  barchart.html  piechart.html
Chapter_03/: README.md  clipping.html  events.html  image_fills.html  opacity.html  rotate_and_save_state.html  transforms.html
Chapter_04/: README.md  animated_rectangle.html  particle_simulator_one.html  particle_simulator_three.html  particle_simulator_two.html  sprite_animation_01.html  sprite_animation_02.html
Chapter_05/Space_N_Vaders/: script.js  style.css
Chapter_05/Space_N_Vaders_01/: README.md  index.html
Chapter_05/Space_N_Vaders_02/: index.html  script.js  style.css
Chapter_06/Composite_Modes/: index.html  script.js
Chapter_06/Photo_Desaturation/: index.html  script.js  server.py
Chapter_06/Photo_Inversion/: index.html  script.js
Chapter_06/Shadow_Effects/: index.html  script.js
Chapter_07/: README.md
Chapter_07/Three_JS_Rotating_Cube/: README.md  go.mod  main.go
Chapter_07/Three_JS_Rotating_Cube/templates/: about.html  (+2 more)
Chapter_07/Three_JS_Rotating_Teapot/: LICENSE.md  README.md  go.mod  index.html  main.go
Chapter_07/Three_JS_Rotating_Torus/: README.md  app.py  pyproject.toml
Chapter_07/Three_JS_Torus/: README.md  app.py  pyproject.toml
Chapter_07/Three_JS_Torus/static/css/: style.css
Chapter_07/Three_JS_Torus/templates/: base.html
Chapter_08/: README.md
Chapter_08/3D_Car/: README.md  go.mod  index.html  main.go
(+15 files in other folders)
