[project]
name = "three-js-torus"
version = "0.1.0"
description = ""
authors = [
    {name = "Big-Mike-Edahow",email = "perigran_falcon@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "three_js_torus", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
